Remove src/index.ts and updates package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "plugin",
     "plug-in"
   ],
-  "main": "dist/index.js",
+  "main": "dist",
+  "types": "dist",
   "files": [
     "dist/*"
   ],
