--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "concordialang-types",
-  "version": "2.0.0",
-  "description": "Basic types for the Concordia Compiler and its plug-ins",
+  "version": "2.1.3",
+  "description": "Basic types for Concordia Compiler and its plug-ins",
+  "homepage": "https://github.com/thiagodp/concordialang-types",
   "license": "AGPL-3.0",
   "readme": "readme.md",
-  "homepage": "https://github.com/thiagodp/concordialang-types#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thiagodp/concordialang-types.git"
+  },
+  "bugs": {
+    "url": "https://github.com/thiagodp/concordialang-types/issues"
+  },
   "author": {
     "name": "Thiago Delgado Pinto",
     "email": "thiago-dp@bol.com.br"
@@ -21,37 +28,27 @@
     "plugin",
     "plug-in"
   ],
-  "main": "dist",
-  "types": "dist",
   "files": [
-    "dist/*"
+    "index.*",
+    "*.d.ts"
   ],
+  "source": "src/index.ts",
+  "main": "index.js",
+  "browser": "index.umd.js",
+  "unpkg": "index.umd.js",
+  "module": "index.esm.js",
+  "types": "index.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "test": "echo \"No tests\" && exit 1",
+    "clean": "del \"index*.js\" \"*.map\" \"*.d.ts\" ",
+    "prebuild": "npm run clean",
+    "build": "microbundle --no-sourcemap",
     "preversion": "npm run build",
     "postversion": "git push && git push --tags"
   },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thiagodp/concordialang-types.git"
-  },
-  "bugs": {
-    "url": "https://github.com/thiagodp/concordialang-types/issues"
-  },
   "devDependencies": {
-    "@types/node": "^11.11.6",
-    "rimraf": "^2.6.3",
-    "typescript": "^3.3.4000"
+    "del-cli": "^3.0.1",
+    "microbundle": "^0.13.0",
+    "typescript": "^4.2.3"
   }
 }
