--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "concordialang-types",
-  "version": "2.1.4",
+  "version": "2.1.5",
   "description": "Basic types for Concordia Compiler and its plug-ins",
   "homepage": "https://github.com/thiagodp/concordialang-types",
   "license": "AGPL-3.0",
@@ -14,7 +14,7 @@
   },
   "author": {
     "name": "Thiago Delgado Pinto",
-    "email": "thiago-dp@bol.com.br"
+    "url": "https://github.com/thiagodp/"
   },
   "keywords": [
     "concordialang",
@@ -29,26 +29,27 @@
     "plug-in"
   ],
   "files": [
-    "index.*",
-    "*.d.ts"
+    "dist/*"
   ],
   "source": "src/index.ts",
-  "main": "index.js",
-  "browser": "index.umd.js",
-  "unpkg": "index.umd.js",
-  "module": "index.esm.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"No tests\" && exit 1",
-    "clean": "del \"index*.js\" \"*.map\" \"*.d.ts\" ",
+    "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "microbundle --no-sourcemap",
+    "build": "microbundle --no-sourcemap --target node --format esm,cjs",
     "preversion": "npm run build",
-    "postversion": "git push && git push --tags"
+    "postversion": "git rebase -i HEAD~2",
+    "fixup": "git commit --fixup HEAD && git rebase --autosquash -i HEAD~2 && git push --force"
   },
   "devDependencies": {
-    "del-cli": "^3.0.1",
-    "microbundle": "^0.13.0",
-    "typescript": "^4.2.3"
+    "microbundle": "^0.13.3",
+    "rimraf": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=12.20"
   }
 }
